[css] Fixed small spacing issues on service details page

--- a/assets/css/templates/_services.scss
+++ b/assets/css/templates/_services.scss
@@ -58,6 +58,10 @@
         grid-template-columns: 1fr 1fr;
     } 
     
+    .services .grid__container--service__details .details__emblem {
+        grid-column: span 2;
+    }
+
     .services .grid__item--headline h2 {
         font-size: 1rem;
     }
@@ -77,7 +81,8 @@
         grid-template-columns: 1fr 1fr 1fr;
     }
 
-    .services .grid__container:nth-of-type(4) {
+    .services .grid__container:nth-of-type(4),
+    .services .grid__container:nth-of-type(5) {
         border: none;
     }
 
